# EDMD

./: .gitignore  calcdiff.c
Grow/: Makefile  mdgrow.c  mdgrow.h  meson.build
Single/: CMakeLists.txt  Makefile  mdSingle.c  mdSingle.h  meson.build  splitmix64.c  xoshiro256plus.c
Single/PseudoRNG/: CMakeLists.txt  meson.build  pseudorng.h  splitmix64.c  splitmix64.h  xoshiro256plus.c
